@@ -15,7 +15,7 @@
  * @author Nick Sanidas
  * @created 2015
  */
-package src.proguard.owasp;
+package src.proguard.owasp.cmdi;
 
 import javax.servlet.ServletException;
 import javax.servlet.annotation.WebServlet;
@@ -25,19 +25,20 @@ import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 /**
  * Command injection example
  * source: MethodSignature("javax/servlet/http/HttpServletRequest", "getParameterMap", "()Ljava/util/Map;")
- * sink: MethodSignature("java/lang/Runtime", "exec", "([Ljava/lang/String;[Ljava/lang/String;)Ljava/lang/Process;")
+ * sink: MethodSignature("java/lang/Runtime", "exec", "(Ljava/lang/String;[Ljava/lang/String;Ljava/io/File;)Ljava/lang/Process;")
  * main: doGet
  *
- * DOES NOT WORK
+ * WORKS
  */
 
-@WebServlet(value = "/cmdi-00/BenchmarkTest00497")
-public class BenchmarkTest00497 extends HttpServlet {
+@WebServlet(value = "/cmdi-00/BenchmarkTest00500")
+public class BenchmarkTest00500 extends HttpServlet {
 
     private static final long serialVersionUID = 1L;
 
@@ -52,47 +53,34 @@ public class BenchmarkTest00497 extends HttpServlet {
             throws ServletException, IOException {
         response.setContentType("text/html;charset=UTF-8");
 
-        java.util.Map<String, String[]> map = request.getParameterMap();
+        Map<String, String[]> map = request.getParameterMap();
         String param = "";
         if (!map.isEmpty()) {
             // MODIFIED: replace String[] with List<String>, doesn't work with array values access
-            List<String> values = Arrays.stream(map.get("BenchmarkTest00497")).collect(Collectors.toList());
-            if (values != null) param = values.get(0);
+            List<String> values = Arrays.stream(map.get("BenchmarkTest00500")).toList();
+            if (values != null) param = values.get(1);
         }
-
         String bar;
-        // MODIFIED: replace string "ABC" with List<Character>, problems with 'charAt', 'toCharArray', etc
-        List<Character> guess = List.of('A', 'B', 'C');
-        char switchTarget = guess.get(0);
 
-        // Simple case statement that assigns param to bar on conditions 'A', 'C', or 'D'
-        switch (switchTarget) {
-            case 'A':
-                bar = param;
-                break;
-            case 'B':
-                bar = "bobs_your_uncle";
-                break;
-            case 'C':
-            case 'D':
-                bar = param;
-                break;
-            default:
-                bar = "bobs_your_uncle";
-                break;
-        }
+        // Simple if statement that assigns param to bar on true condition
+        int num = 196;
+        if ((500 / 42) + num > 200) bar = param;
+        else bar = "This should never happen";
 
-        String cmd =
-                org.owasp.benchmark.helpers.Utils.getInsecureOSCommandString(
-                        this.getClass().getClassLoader());
-        String[] args = {cmd};
-        // PROBLEM: does not treat this array as tainted, though 'bar' is tainted
-        String[] argsEnv = {bar};
+        String cmd = "...";
 
+        // MODIFIED: comment out the code below, otherwise there is some evaluation exception
+//        String osName = System.getProperty("os.name");
+//        if (osName.indexOf("Windows") != -1) {
+//            cmd = org.owasp.benchmark.helpers.Utils.getOSCommandString("echo");
+//        }
+
+        String[] argsEnv = {"Foo=bar"};
         Runtime r = Runtime.getRuntime();
 
         try {
-            Process p = r.exec(args, argsEnv);
+            Process p =
+                    r.exec(cmd + bar, argsEnv, new java.io.File(System.getProperty("user.dir")));
             org.owasp.benchmark.helpers.Utils.printOSCommandResults(p, response);
         } catch (IOException e) {
             System.out.println("Problem executing cmdi - TestCase");
@@ -100,5 +88,8 @@ public class BenchmarkTest00497 extends HttpServlet {
                     .println(org.owasp.esapi.ESAPI.encoder().encodeForHTML(e.getMessage()));
             return;
         }
+    }
+
+    public void sink4(Map<String, String[]> map) {
     }
 }
